ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "app1.mydomain.com"
    http:
      paths:
      - backend:
          service:
            name: app-v1
            port:
              number: 8080
  - host: "app2.mydomain.com"
    http:
      paths:
      - backend:
          service:
            name: app-server-svc
            port:
              number: 9090
